--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -198,13 +198,13 @@
     height: 500px;
     border :2px solid orange;
     border-radius: 10px;
-    justify-content: center;
     align-items: center;
     box-sizing: border-box;
 }
 
 .crewListLine>.PrivateBlock{
     background-color: black;
+    justify-content: center;
     gap: 30px;
 }
 
@@ -242,8 +242,8 @@
     flex-direction: column;
     width: 150px;
     min-width: 150px;
-    height: 180px;
-    min-height: 180px;
+    height: 150px;
+    min-height: 150px;
     gap: 10px;
 }
 
@@ -289,7 +289,9 @@
 }
 
 .crewMemberInfoLine h2{
+    display: flex;
     height: 100%;
+    align-items: center;
 }
 
 .memberDataLine_Top>h2:first-child{
