--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -284,7 +284,7 @@
 .crewMemberInfoLine>div{
     display: flex;
     width: 100%;
-    height: 60px;
+    height: 45px;
     justify-content: space-between;
 }
 
@@ -292,6 +292,8 @@
     display: flex;
     height: 100%;
     align-items: center;
+    overflow: hidden;
+    text-wrap: nowrap;
 }
 
 .memberDataLine_Top>h2:first-child{
@@ -300,28 +302,27 @@
 }
 .memberDataLine_Top>.memberNickName{
     flex-grow: 1;
+    justify-content: center;
 }
 
 .memberDataLine_Middle>.memberLocation{
-    width: 180px;
-    min-width: 180px;
+    width: 175px;
+    min-width: 175px;
 }
 
 .memberDataLine_Middle>.memberAge{
-    width: 80px;
-    min-width: 80px;
+    width: 75px;
+    min-width: 75px;
 }
 
-.memberDataLine_Bottom>.memberBikeBrand{
-    width: 100px;
-    min-width: 100px;
-}   
-.memberDataLine_Bottom>.memberBikeModel{
-    flex-grow: 1;
+.memberDataLine_Bottom>h2{
+    width: 100%;
 }
 
 .crewMemberInfoLine>.memberDataLine_Bottom{
-    overflow-x: hidden;
+    height: 90px;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* ✏️ 크루 생성 창 범위 */
