--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -245,6 +245,7 @@
     height: 150px;
     min-height: 150px;
     gap: 10px;
+    position: relative;
 }
 
 .memberDataLine_Profile>.memberAuthority{
@@ -343,6 +344,15 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .crewListLine>.crewMemberBoxLine{
+        height: max-content;
+        min-height: 200px;
+        max-height: 500px;
+    }
+
+
+
 }
 
 .CreateCrew{
