2024. 10. 27 🛠️ 크루 매니저 페이지 CSS 및 코드 수정 🚧
🛠️ 크루 매니저 멤버 디테일 박스 라인 작업 중...🚧

--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -608,13 +608,18 @@
     }
 
     /* 멤버 디테일 정보 라인 */
+    
+    .Detail_Mid>.MemberInfoLine:first-child{
+        flex-direction: column;
+    }
+
     .Detail_Mid>.MemberInfoLine{
             display: flex;
             width: 100%;
     }
 
-    .Detail_Mid>.MemberInfoLine:first-child{
-        flex-direction: column;
+    .MemberInfoLine>div{
+        display: flex;
     }
 
     /* 멤버 디테일 이메일 */
