--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -620,7 +620,7 @@
         justify-content: space-between;
     }
 
-    .MemberInfoLine>div{
+    .MemberInfoLineBottom>div, .MemberInfoLineTop>div{
         display: flex;
         gap: 20px;
         height: 50px;
