--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -648,7 +648,7 @@
     .Detail_Bottom{
         align-items: center;
         >img{
-            margin-left: 10px;
+            margin : 0 10px;
             width: 180px;
             height: 180px;
         }
