--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -648,7 +648,7 @@
     .Detail_Bottom{
         align-items: center;
         >img{
-            margin : 0 10px;
+            margin-left : 10px;
             width: 180px;
             height: 180px;
         }
@@ -656,21 +656,37 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            width: 370px;
+            width: 240px;
+            min-width: 240px;
+            height: 180px;
             div{
                 display: flex;
-                gap: 15px
+                width: 100%;
+            }
+            .MemberBikeName{
+                width: 100%;
+                overflow: hidden;
+                height: 70px;
+                justify-content: center;
+                align-items: center;
             }
             .MemberBikeModelData{
                 width: 300px;
                 text-align: center;
             }
-            .MemberBikeCC{
+            .MemberBikeDetail{
+                flex-direction: column;
+                box-sizing: border-box;
+                padding: 0 20px;
+            }
+            .MemberBikeDetail>div{
                 text-align: center;
-                width: 60px;
-                margin-right: 10px;
+                gap: 20px;
             }
 
+            .MemberBikeCC>h2:first, .MemberBikeYear>h2:first{
+                width: 100px;
+            }
         }
     }
 
