2024. 10. 27 🛠️ 크루 매니저 페이지 CSS 및 코드 수정 🚧
🛠️크루 매니저 멤버 바이크 정보 라인 CSS 작업 중...

--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -677,14 +677,14 @@
             .MemberBikeDetail{
                 flex-direction: column;
                 box-sizing: border-box;
-                padding: 0 20px;
+                padding: 0 20px 0 50px;
             }
             .MemberBikeDetail>div{
                 text-align: center;
                 gap: 20px;
             }
 
-            .MemberBikeCC>h2:first, .MemberBikeYear>h2:first{
+            .MemberBikeCC>h2:first-child, .MemberBikeYear>h2:first-child{
                 width: 100px;
             }
         }
