2024. 10. 27 🛠️ 크루 매니저 페이지 CSS 및 코드 수정 ✅
🛠️ 크루 매니저 페이지 바이크 정보 라인 CSS 작업 완료 ✅
🛠️ 크루 가입 신청 수락 CSS 작업 중... 🚧

--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -681,11 +681,13 @@
             }
             .MemberBikeDetail>div{
                 text-align: center;
-                gap: 20px;
             }
 
             .MemberBikeCC>h2:first-child, .MemberBikeYear>h2:first-child{
                 width: 90px;
+            }
+            .MemberBikeCC>h2:last-child, .MemberBikeYear>h2:last-child{
+                width: 110px;
             }
         }
     }
