--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -343,7 +343,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 4;
 }
 
 @media(max-width:999px){
@@ -466,30 +465,40 @@
     background-color: black;
     border: 2px solid orange;
     border-radius: 10px;
-    width: 800px;
-    height: 400px;
+    box-sizing: border-box;
+    width: 70vw;
+    min-width: 440px;
+    max-width: 800px;
+    height: max-content;
     flex-direction: column;
-    justify-content: center;
     text-align: center;
     align-items: center;
-    z-index: 3;
     >h1{
-        margin: 20px 0;
+        font-size: 4.5vw;
+        display: flex;
+        width: 100%;
+        height: 12.5vw;
+        min-height: 60px;
+        max-height: 110px;
+        align-items: center;
+        justify-content: center;
     }
     .BtnLine{
-        width: 80%;
-        height: 60%;
+        width: 100%;
+        height: max-content;
         display: flex;
         justify-content: space-around;
         align-items: center;
+        padding-bottom: 20px;
+        box-sizing: border-box;
         label{
             display: flex;
             background-size: 100%;
-            width: 200px;
-            height: 200px;
+            width: 100%;
+            height: 100%;
+            cursor: pointer;
         }
         .Create>label:hover{
-            cursor: pointer;
             background-image: url('/public/img/crewmanager/CrewCreateOn.png');
         }
         .Create>label{
@@ -497,15 +506,21 @@
             
         }
         .Join>label:hover{
-            cursor: pointer;
             background-image: url('/public/img/crewmanager/CrewJoinOn.png');
         }
         .Join>label{
             background-image: url('/public/img/crewmanager/CrewJoinOff.png');
             
         }
+    }
 
-
+    .BtnLine>div{
+        width: 25vw;
+        height: 25vw;
+        min-width: 150px;
+        max-width: 200px;
+        min-height: 150px;
+        max-height: 200px;
     }
 }
 
