--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -345,95 +345,88 @@
     align-items: center;
 }
 
-@media(max-width:999px){
-    .crewManager{
-        flex-direction: column;
-    }
-
-    .crewListLine>.crewMemberBoxLine{
-        height: max-content;
-        min-height: 200px;
-        max-height: 500px;
-    }
-
-
-
-}
-
-.CreateCrew{
+.LayoutBlock>.CreateCrew{
     display: flex;
     position: absolute;
     text-align: center;
     align-items: center;
     flex-direction: column;
-    justify-content: space-between;
-    width: 700px;
-    height: 560px;
+    width: 70vw;
+    max-width: 800px;
+    min-width: 440px;
+    height: max-content;
     background-color: rgb(33, 31, 31);
     border: 4px solid orange;
-    border-radius: 20px;
-    z-index: 2;
-    
-    h2{
-        background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
-        font-weight: bold;
-        -webkit-text-stroke-width: 0.1px;
-        -webkit-text-stroke-color: black;
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;
-    }
-
-    .CreateInputLine{
+    border-radius: 10px;
+    >h1{
+        font-size: 4.5vw;
         display: flex;
-        justify-content: space-between;
-        width: 70%;
-        text-align: center;
-        .TextLine{
-            width: 300px;
-        }
-         h2{
-            width: 150px;
-        }
-        .SelectLine, .TextLine{
-            display: flex;
-            width: 350px;
-        }
-
-        input, select, textarea{
-            border: 2px solid orange;
-            border-radius: 10px;
-            color: gold;
-            background-color: black;
-        }
-
-        .TextLine{
-            justify-content: center;
-            
-
-            input{
-                width: 100%;
-                text-align: center;
-                font-size: 20px;
-                font-weight: bold;
-            }
-        }
-        .SelectLine{
-            justify-content: space-between;
-            select{
-                width: 150px;
-                text-align: center;
-                font-size: 25px;
-                font-weight: bold;
-            }
-        }
-        .CrewContext_input{
-            height: 110px;
-            font-size: 20px;
-            font-weight: bold;
-            padding: 20px;
-        }
+        width: 100%;
+        height: 12.5vw;
+        min-height: 60px;
+        max-height: 110px;
+        align-items: center;
+        justify-content: center;
     }
+}
+
+.CreateCrew>div{
+    width: 100%;
+    height: max-content;
+    display: flex;
+    text-align: center;
+}
+
+.CreateInputLine>.TextLine{
+    width: 300px;
+}
+
+.CreateInputLine>h2{
+    width: 150px;
+}
+
+.CreateInputLine>.TextLine, .CreateInputLine>.SelectLine, .CreateInputLine>.CrewContext_input{
+    display: flex;
+    width: 350px;
+}
+
+/* 크루 이름 입력 라인 */
+.TextLine>input{
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+/* 크루 인사글 타이틀 */
+.CreateInputLine>.CrewContextTitle{
+    display: flex;
+    flex-direction: column;
+}
+
+/* 크루 도시 선택 라인 */
+.CreateInputLine>.SelectLine{
+    justify-content: space-between;
+    select{
+        width: 150px;
+        text-align: center;
+        font-size: 25px;
+        font-weight: bold;
+    }
+}
+
+.CreateInputLine>.CrewContext_input{
+    height: 110px;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 20px;
+}
+
+.TextLine>input, .SelectLine>select,  .CrewContext_input>textarea{
+    border: 2px solid orange;
+    border-radius: 10px;
+    color: gold;
+    background-color: black;
 }
 
 .CreateCrewBtn_Line{
@@ -459,6 +452,8 @@
         background-image: url('/public/img/crewmanager/CancelBtnOn.png');
     }
 }
+
+
 /* 🛠️ 크루 가입 또는 생성 확인 박스 */
 .CheckCrew{
     position: absolute;
@@ -714,4 +709,15 @@
     height: max-content;
     display: flex;
     box-sizing: border-box;
+}
+
+@media(max-width:999px){
+    .crewManager{
+        flex-direction: column;
+    }
+    .crewListLine>.crewMemberBoxLine{
+        height: max-content;
+        min-height: 200px;
+        max-height: 500px;
+    }
 }
