--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -358,23 +358,26 @@
     background-color: rgb(33, 31, 31);
     border: 4px solid orange;
     border-radius: 10px;
-    >h1{
-        font-size: 4.5vw;
-        display: flex;
-        width: 100%;
-        height: 12.5vw;
-        min-height: 60px;
-        max-height: 110px;
-        align-items: center;
-        justify-content: center;
-    }
+}
+
+.CreateCrew>h1{
+    display: flex;
+    font-size: 4.5vw;
+    width: 100%;
+    height: 12.5vw;
+    min-height: 60px;
+    max-height: 110px;
+    align-items: center;
+    justify-content: center;
 }
 
 .CreateCrew>div{
+    display: flex;
     width: 100%;
     height: max-content;
-    display: flex;
+    justify-content: center;
     text-align: center;
+    gap: 30px;
 }
 
 .CreateInputLine>.TextLine{
@@ -402,6 +405,7 @@
 .CreateInputLine>.CrewContextTitle{
     display: flex;
     flex-direction: column;
+    width: 150px;
 }
 
 /* 크루 도시 선택 라인 */
@@ -422,7 +426,7 @@
     padding: 20px;
 }
 
-.TextLine>input, .SelectLine>select,  .CrewContext_input>textarea{
+.TextLine>input, .SelectLine>select, .CreateInputLine>.CrewContext_input{
     border: 2px solid orange;
     border-radius: 10px;
     color: gold;
@@ -430,9 +434,7 @@
 }
 
 .CreateCrewBtn_Line{
-    display: flex;
     margin-bottom: 10px;
-    gap: 30px;
     label{
         background-size: 100px 60px;
         width: 100px;
