2024. 10. 29 🛠️ 크루 매니저 페이지 CSS 작업 🚧
🛠️ 크루 생성 라인 CSS 작업 🚧

--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -424,6 +424,7 @@
     width: 30vw; 
     min-width: 280px;
     max-width: 360px;
+    margin-right: 10px;
     select{
         width: 30vw;
         min-width: 130px;
