--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -386,7 +386,9 @@
     justify-content: center;
     align-items: center;
     width: 130px;
-    height: 100%;
+    height: 10vw;
+    min-height: 50px;
+    max-height: 60px;
 }
 
 .CreateInputLine>.TextLine, .CreateInputLine>.SelectLine, .CreateInputLine>.CrewContext_input{
@@ -420,13 +422,14 @@
 
 /* 크루 도시 선택 라인 */
 .CreateInputLine>.SelectLine{
-    justify-content: space-between;
+    justify-content: space-around;
     width: 30vw; 
     min-width: 280px;
     max-width: 360px;
     margin-right: 10px;
+    gap: 20px;
     select{
-        width: 30vw;
+        width: 10vw;
         min-width: 130px;
         max-width: 160px;
         height: 10vw;
