--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -153,6 +153,7 @@
             font-size: 25px;
             font-weight: bold;
             color: gold;
+            resize: none;
         }
     }
 }
@@ -413,13 +414,6 @@
     font-weight: bold;
 }
 
-/* 크루 인사글 타이틀 */
-.CreateInputLine>.CrewContextTitle{
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-}
-
 /* 크루 도시 선택 라인 */
 .CreateInputLine>.SelectLine{
     justify-content: space-around;
@@ -441,11 +435,29 @@
     }
 }
 
+
+/* 크루 인사글 타이틀 */
+.CreateInputLine>.CrewContextTitle{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 130px;
+    height: 280px;
+    min-height: 280px;
+}
+
+/* 크루 인사글 내용 */
 .CreateInputLine>.CrewContext_input{
-    height: 110px;
+    width: 30vw; 
+    min-width: 280px;
+    max-width: 360px;
+    height: 280px;
+    min-height: 280px;
     font-size: 20px;
     font-weight: bold;
-    padding: 20px;
+    padding: 10px;
+    resize: none;
+    box-sizing: border-box;
 }
 
 .TextLine>input, .SelectLine>select, .CreateInputLine>.CrewContext_input{
