--- a/src/RidingAnywhere-client/css/crewManager.css
+++ b/src/RidingAnywhere-client/css/crewManager.css
@@ -441,6 +441,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 130px;
     height: 280px;
     min-height: 280px;
