--- a/src/RidingAnywhere-client/css/CrewJoinBoard.css
+++ b/src/RidingAnywhere-client/css/CrewJoinBoard.css
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     gap: 30px;
+    position: relative;
 }
 
 /* 크루 모집 페이지 h2 폰트 설정 */
@@ -78,7 +79,9 @@
 /* 선택된 크루 정보 박스 */
 .CrewJoinBoard>.CrewInfoBox{
     width: 500px;
-    height: 100%;
+    max-width: 500px;
+    min-width: 500px;
+    height: max-content;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -89,7 +92,7 @@
 .CrewInfoBox>.CrewInfoBox_Block{
     position: absolute;
     display: flex;
-    width: 500px;
+    width: 100%;
     height: 100%;
     justify-content: center;
     align-items: center;
@@ -97,6 +100,14 @@
     border: 2px solid orange;
     border-radius: 20px;
     z-index: 2;
+ }
+
+ .CrewInfoBox>.CrewInfoBoxCloseBtn{
+    display: none;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    right: 0;
  }
 
  /* 선택된 크루 정보 박스 탑 */
@@ -112,7 +123,6 @@
     .JoinBtnLabel{
         cursor: pointer;
         position: absolute;
-        background-image: url("/public/img/crewjoin/JoinBtnOn.png");
         width: 80px;
         height: 80px;
         background-size: cover;
@@ -242,5 +252,22 @@
                 border: 2px solid orange;
             }
         }
+    }
+}
+
+
+@media(max-width:1199px) {
+
+    .CrewJoinBoard>.CrewInfoBox{
+        display: none;
+        position: absolute;
+    }
+
+    .CrewInfoBox.CrewInfoBox_Block{
+        display: none;
+    }
+
+    .CrewInfoBoxCloseBtn{
+        display: flex;
     }
 }
