2024. 10. 29 🛠️ 크루 조인 페이지 작업 🚧
🛠️ 크루 정보 박스 팝업 CSS 조정 🚧

--- a/src/RidingAnywhere-client/css/CrewJoinBoard.css
+++ b/src/RidingAnywhere-client/css/CrewJoinBoard.css
@@ -10,6 +10,7 @@
     justify-content: center;
     gap: 30px;
     position: relative;
+    background-color: black;
 }
 
 /* 크루 모집 페이지 h2 폰트 설정 */
@@ -261,6 +262,10 @@
     .CrewJoinBoard>.CrewInfoBox{
         display: none;
         position: absolute;
+        background-color: black;
+        border: 2px solid orange;
+        border-radius: 10px;
+        box-sizing: border-box;
     }
 
     .CrewInfoBox.CrewInfoBox_Block{
