--- a/src/RidingAnywhere-client/css/CrewJoinBoard.css
+++ b/src/RidingAnywhere-client/css/CrewJoinBoard.css
@@ -104,11 +104,11 @@
  }
 
  .CrewInfoBox>.CrewInfoBoxCloseBtn{
-    display: none;
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    right: 0;
+     position: absolute;
+     width: 50px;
+     height: 50px;
+     right: 0;
+     display: none;
  }
 
  /* 선택된 크루 정보 박스 탑 */
@@ -272,7 +272,7 @@
         display: none;
     }
 
-    .CrewInfoBoxCloseBtn{
+    .CrewInfoBox>.CrewInfoBoxCloseBtn{
         display: flex;
     }
 }
