--- a/src/RidingAnywhere-client/css/CrewJoinBoard.css
+++ b/src/RidingAnywhere-client/css/CrewJoinBoard.css
@@ -107,6 +107,7 @@
      position: absolute;
      width: 50px;
      height: 50px;
+     background-size: cover;
      right: 0;
      display: none;
      border: none;
