--- a/src/RidingAnywhere-client/css/CrewJoinBoard.css
+++ b/src/RidingAnywhere-client/css/CrewJoinBoard.css
@@ -79,9 +79,9 @@
 
 /* 선택된 크루 정보 박스 */
 .CrewJoinBoard>.CrewInfoBox{
-    width: 500px;
+    width: 75vw;
     max-width: 500px;
-    min-width: 500px;
+    min-width: 440px;
     height: max-content;
     position: relative;
     display: flex;
@@ -127,9 +127,6 @@
     align-items: center;
     height: 80px;
     margin: 20px 0;
-    h1{
-        height: max-content;
-    }
 }
 
 .CrewInfoBox_Top>.JoinBtnLabel{
@@ -143,38 +140,50 @@
 
 /* 선택된 크루 정보 박스 메인 */
 .CrewInfoBox>.CrewInfoBox_Main{
+    width: 100%;
+    height: max-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 2px solid orange;
-    border-radius: 20px;
+    border-radius: 10px;
     div{
-        width: 450px;
+        width: 100%;
         display: flex;
         justify-content: space-between;
-        text-align: center;
         h2{
-            width: 220px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 50%;
+            height: 50px;
         }
     }
 }
 
 /* 선택된 크루 정보 박스 바텀 */
-.CrewInfoBox>.CrewInfoBox_Botton{
+.CrewInfoBox>.CrewInfoBox_Bottom{
     width: 100%;
-    height: 400px;
+    height: max-content;
     display: flex;
     flex-direction: column;
     h1{
-        margin-top: 20px;
+        margin: 20px 0;
         text-align: center;
     }
-    h2{
+    .CrewContextBox{
+        width: 100%;
         border: 2px solid orange;
-        border-radius: 20px;
+        border-radius: 10px;
         height: 300px;
+        max-height: 300px;
+        overflow-y: scroll;
+        scrollbar-width: none;
+        text-wrap: wrap;
+        width: 100%;
         padding: 20px;
+        box-sizing: border-box;
     }
 }
 
@@ -287,6 +296,6 @@
     }
 
     .CrewInfoBox_Top>.JoinBtnLabel{
-        transform: translate(160px);
+        transform: translate(140px);
     }
 }
