--- a/src/RidingAnywhere-client/css/CrewJoinBoard.css
+++ b/src/RidingAnywhere-client/css/CrewJoinBoard.css
@@ -187,53 +187,67 @@
     }
 }
 
+.CrewJoinBoard>.CrewListBox{
+    width: 85vw;
+    min-width: 440px;
+    max-width: 640px;
+    margin-top: 20px;
+    margin-right: 20px;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.CrewListBox>.CrewListBox_Top{
+    width: 100%;
+    height: 80px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    border: 2px solid orange;
+    border-radius: 20px;
+    .CrewNameSuchBox{
+        margin-left: 10px;
+        border-radius: 10px;
+        text-align: center;
+        background-color: white;
+        color: black;
+        display: flex;
+        width: 240px;
+        height: 40px;
+    }
+    .CrewNameSearchBtn{
+        margin-left: 20px;
+        margin-right: 10px;
+        width: 60px;
+        height: 60px;
+        border: 0;
+        background-color: rgba(255, 255, 255, 0);
+        background-image: url("/public/img/crewjoin/SearchBtnOff.png");
+        background-size: cover;
+        cursor: pointer;
+    }
+    .CrewNameSearchBtn:hover{
+        background-image: url("/public/img/crewjoin/SearchBtnOn.png");
+    }
+
+    .selectCity, .selectTown{
+        width: 130px;
+        height: 60px;
+        margin-left: 30px;
+        border-radius: 20px;
+        text-align: center;
+        font-size: 20px;
+    }
+}
+
+
+
+
+
 .CrewJoinBoard{
     .CrewListBox{
-        width: 700px;
-        margin-top: 20px;
-        margin-right: 20px;
-        .CrewListBoxt_Top{
-            width: 100%;
-            height: 80px;
-            align-items: center;
-            justify-content: center;
-            display: flex;
-            border: 2px solid orange;
-            border-radius: 20px;
-            .CrewNameSuchBox{
-                margin-left: 10px;
-                border-radius: 10px;
-                text-align: center;
-                background-color: white;
-                color: black;
-                display: flex;
-                width: 240px;
-                height: 40px;
-            }
-            .CrewNameSearchBtn{
-                margin-left: 20px;
-                margin-right: 10px;
-                width: 60px;
-                height: 60px;
-                border: 0;
-                background-color: rgba(255, 255, 255, 0);
-                background-image: url("/public/img/crewjoin/SearchBtnOff.png");
-                background-size: cover;
-                cursor: pointer;
-            }
-            .CrewNameSearchBtn:hover{
-                background-image: url("/public/img/crewjoin/SearchBtnOn.png");
-            }
-
-            .selectCity, .selectTown{
-                width: 130px;
-                height: 60px;
-                margin-left: 30px;
-                border-radius: 20px;
-                text-align: center;
-                font-size: 20px;
-            }
-        }
         .CrewListBox_Section{
             display: flex;
             margin-top: 15px;
