--- a/src/RidingAnywhere-client/css/CrewJoinBoard.css
+++ b/src/RidingAnywhere-client/css/CrewJoinBoard.css
@@ -187,63 +187,82 @@
     }
 }
 
+/* 크루 조인 페이지 크루 리스트 박스 */
 .CrewJoinBoard>.CrewListBox{
     width: 85vw;
     min-width: 440px;
     max-width: 640px;
-    margin-top: 20px;
-    margin-right: 20px;
     height: max-content;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+/* 크루 리스트 탑 라인 */
 .CrewListBox>.CrewListBox_Top{
     width: 100%;
-    height: 80px;
+    height: max-content;
     align-items: center;
     justify-content: center;
     display: flex;
     border: 2px solid orange;
     border-radius: 20px;
-    .CrewNameSuchBox{
-        margin-left: 10px;
-        border-radius: 10px;
-        text-align: center;
-        background-color: white;
-        color: black;
-        display: flex;
-        width: 240px;
-        height: 40px;
-    }
-    .CrewNameSearchBtn{
-        margin-left: 20px;
-        margin-right: 10px;
-        width: 60px;
-        height: 60px;
-        border: 0;
-        background-color: rgba(255, 255, 255, 0);
-        background-image: url("/public/img/crewjoin/SearchBtnOff.png");
-        background-size: cover;
-        cursor: pointer;
-    }
-    .CrewNameSearchBtn:hover{
-        background-image: url("/public/img/crewjoin/SearchBtnOn.png");
-    }
-
-    .selectCity, .selectTown{
-        width: 130px;
-        height: 60px;
-        margin-left: 30px;
-        border-radius: 20px;
-        text-align: center;
-        font-size: 20px;
-    }
+    box-sizing: border-box;
 }
 
+/* 크루 리스트 탑 라인 (크루 이름 조회 라인 + 크루 도시 조회 라인) */
+.CrewListBox_Top>div{
+    display: flex;
+    width: 100%;
+    max-width: 320px;
+    min-width: 270px;
+    height: 80px;
+    min-height: 80px;
+    max-width: 80px;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    box-sizing: border-box;
+    position: relative;
+}
 
+.CrewNameSearchBoxLine>.CrewNameSearchBox{
+    border-radius: 10px;
+    text-align: center;
+    background-color: white;
+    color: black;
+    display: flex;
+    width: 100%;
+    height: 60px;
+}
 
+.CrewNameSearchBoxLine>.CrewNameSearchBtn{
+    width: 60px;
+    min-width: 60px;
+    height: 60px;
+    border: 0;
+    padding: 0;
+    background-color: rgba(255, 255, 255, 0);
+    background-image: url("/public/img/crewjoin/SearchBtnOff.png");
+    background-size: cover;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+.CrewAddressBoxLine>.CrewNameSearchBtn:hover{
+    background-image: url("/public/img/crewjoin/SearchBtnOn.png");
+}
+
+.CrewAddressBoxLine>.selectCity, .CrewAddressBoxLine>.selectTown{
+    width: 130px;
+    min-width: 130px;
+    height: 60px;
+    min-height: 60px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 20px;
+    box-sizing: border-box;
+}
 
 
 .CrewJoinBoard{
@@ -291,7 +310,6 @@
 
 
 @media(max-width:1199px) {
-
     .CrewJoinBoard>.CrewInfoBox{
         display: none;
         position: absolute;
@@ -311,5 +329,16 @@
 
     .CrewInfoBox_Top>.JoinBtnLabel{
         transform: translate(140px);
+    }
+}
+
+@media(max-width:640px){
+
+    /* 크루 리스트 상단 flex colum으로 변경 */
+    .CrewListBox>.CrewListBox_Top{
+        flex-direction: column;
+    }
+    .CrewListBox_Top>div{
+        max-width: 440px;
     }
 }
