--- a/src/RidingAnywhere-client/css/CrewJoinBoard.css
+++ b/src/RidingAnywhere-client/css/CrewJoinBoard.css
@@ -222,6 +222,7 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
+    padding: 0 10px;
     box-sizing: border-box;
     position: relative;
 }
@@ -254,8 +255,9 @@
 }
 
 .CrewAddressBoxLine>.selectCity, .CrewAddressBoxLine>.selectTown{
-    width: 130px;
+    width: 50%;
     min-width: 130px;
+    max-width: 160px;
     height: 60px;
     min-height: 60px;
     border-radius: 10px;
