--- a/src/RidingAnywhere-client/css/CrewJoinBoard.css
+++ b/src/RidingAnywhere-client/css/CrewJoinBoard.css
@@ -218,7 +218,7 @@
     min-width: 270px;
     height: 80px;
     min-height: 80px;
-    max-width: 80px;
+    max-height: 80px;
     align-items: center;
     justify-content: center;
     gap: 10px;
