--- a/src/RidingAnywhere-client/css/CrewJoinBoard.css
+++ b/src/RidingAnywhere-client/css/CrewJoinBoard.css
@@ -100,6 +100,7 @@
     background-color: black;
     border: 2px solid orange;
     border-radius: 20px;
+    box-sizing: border-box;
     z-index: 2;
  }
 
@@ -148,6 +149,7 @@
     align-items: center;
     border: 2px solid orange;
     border-radius: 10px;
+    box-sizing: border-box;
     div{
         width: 100%;
         display: flex;
@@ -169,6 +171,8 @@
     display: flex;
     flex-direction: column;
     h1{
+        height: 60px;
+        min-height: 60px;
         margin: 20px 0;
         text-align: center;
     }
@@ -196,6 +200,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 20px;
 }
 
 /* 크루 리스트 탑 라인 */
@@ -227,6 +232,7 @@
     position: relative;
 }
 
+/* 크루 이름 조회 라인 */
 .CrewNameSearchBoxLine>.CrewNameSearchBox{
     border-radius: 10px;
     text-align: center;
@@ -254,6 +260,8 @@
     background-image: url("/public/img/crewjoin/SearchBtnOn.png");
 }
 
+/* 크루 활동 지역 검색 라인 */
+
 .CrewAddressBoxLine>.selectCity, .CrewAddressBoxLine>.selectTown{
     width: 50%;
     min-width: 130px;
@@ -267,49 +275,55 @@
 }
 
 
-.CrewJoinBoard{
-    .CrewListBox{
-        .CrewListBox_Section{
-            display: flex;
-            margin-top: 15px;
-            border: 2px solid orange;
-            border-radius: 20px;
-            width: 100%;
-            height: 600px;
-            overflow-y: scroll;
-            scrollbar-width: none;
-            align-items: center;
-            flex-direction: column;
-            .CrewJoiner{
-                display: flex;
-                width: 95%;
-                margin-top: 20px;
-                gap: 15px;
-                border: 2px solid gray;
-                border-radius: 20px;
-                justify-content: center;
-                text-align: center;
-                .Data{
-                    justify-content: center;
-                    height: 100px;
-                    width: 150px;
-                    display: flex;
-                    flex-direction: column;
-                    gap: 5px;
-                }
-                h2{
-                    margin: 0;
-                }
 
-            }
-            .CrewJoiner:hover{
-                cursor: pointer;
-                border: 2px solid orange;
-            }
-        }
+
+.CrewListBox>.CrewListBox_Section{
+    display: flex;
+    flex-direction: column;
+    border: 2px solid orange;
+    box-sizing: border-box;
+    border-radius: 10px;
+    width: 100%;
+    height: max-content;
+    max-height: 570px;
+    min-height: 380px;
+    padding: 18px 8px;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    align-items: center;
+    gap: 20px;
+}
+
+.CrewListBox_Section>.CrewJoiner{
+    display: flex;
+    width: 100%;
+    height: 100px;
+    min-height: 100px;
+    border: 2px solid gray;
+    border-radius: 20px;
+    box-sizing: border-box;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    cursor: pointer;
+    h2{
+        margin: 0;
     }
 }
 
+.CrewListBox_Section>.CrewJoiner:hover{
+    border: 2px solid orange;
+}
+.CrewJoiner>.Data{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 150px;
+    gap: 5px;
+}
 
 @media(max-width:1199px) {
     .CrewJoinBoard>.CrewInfoBox{
