2024. 10. 30 🛠️ 크루 조인 페이지 크루 리스트 박스 작업 ✅
🛠️ 크루 페이지 크루 리스트 박스 작업 완료

--- a/src/RidingAnywhere-client/css/CrewJoinBoard.css
+++ b/src/RidingAnywhere-client/css/CrewJoinBoard.css
@@ -284,9 +284,9 @@
     box-sizing: border-box;
     border-radius: 10px;
     width: 100%;
-    height: max-content;
+    height: 570px;
     max-height: 570px;
-    min-height: 490px;
+    min-height: 570px;
     padding: 18px 8px;
     overflow-y: scroll;
     scrollbar-width: none;
