2024. 10. 30 🛠️ 누락된 코드 재커밋✅

--- a/src/RidingAnywhere-client/css/CrewJoinBoard.css
+++ b/src/RidingAnywhere-client/css/CrewJoinBoard.css
@@ -256,7 +256,7 @@
     box-sizing: border-box;
 }
 
-.CrewAddressBoxLine>.CrewNameSearchBtn:hover{
+.CrewNameSearchBoxLine>.CrewNameSearchBtn:hover{
     background-image: url("/public/img/crewjoin/SearchBtnOn.png");
 }
 
