--- a/src/RidingAnywhere-client/css/CrewJoinBoard.css
+++ b/src/RidingAnywhere-client/css/CrewJoinBoard.css
@@ -31,6 +31,9 @@
     width: 100%;
     height: 100%;
     justify-content: center;
+    align-items: center;
+    background-color: rgba(63, 63, 63, 0.491);
+    z-index: 3;
 }
 
 /* 크루 신청 체크 박스 */
@@ -40,13 +43,15 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    margin-top: 200px;
-    z-index: 3;
-    width: 600px;
-    height: 300px;
+    width: 80vw;
+    min-width: 440px;
+    max-width: 510px;
+    height: 240px;
     background-color: black;
     border: 4px solid orange;
+    box-sizing: border-box;
     border-radius: 20px;
+    gap: 20px;
 }
 
 /* 크루 신청 체크 박스의 OK / 취소 버튼 라인 */
@@ -57,11 +62,13 @@
     height: 70px;
     gap: 50px;
     input{
-        width: 150px;
-        background-size: cover;
+        width: 140px;
+        height: 60px;
+        background-size: 140px 60px;
         background-color: rgba(0, 0, 0, 0);
         cursor: pointer;
         border: 0;
+        padding: 0;
     }
     #JoinOkBtn{
         background-image: url("/public/img/crewjoin/RequestBtnOff.png");
