--- a/src/RidingAnywhere-client/css/crewBoard.css
+++ b/src/RidingAnywhere-client/css/crewBoard.css
@@ -1,113 +1,142 @@
-.CrewBoard{
+.Main_CrewBoard{
+    height: max-content;
+}
+
+.Main_CrewBoard>.CrewBoard{
     width: 100%;
-    height: 600px;
+    height: max-content;
     background-color: black;
-    border: 2px solid orange;
     display: flex;
     flex-direction: column;
     align-items: center;
-    .boardTopLine{
-        display: flex;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-        .boardFilterLine{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            div{
-                width: 100%;
-                height: 50%;
-                margin-top: 10px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-            .filterBottom{
-                gap: 30px;
-            }
-            .boardTextBox{
-                width: 350px;
-                height: 50px;
-                border-radius: 10px;
-                margin-left: 60px;
-                margin-right: 10px;
-                font-size: 20px;
-                text-align: center;
-                font-weight: bolder;
-            }
-            .boardSearchBtn{
-                width: 60px;
-                height: 60px;
-                margin-right: 20px;
-                cursor: pointer;
-                background-color: rgba(0, 0, 0, 0);
-                border: none;
-                background-image: url("/public/img/crewboard/SearchBtnOn.png");
-                background-size: 60px 60px;
-            }
-            .boardSearchType{
-                width: 150px;
-                height: 50px;
-                text-align: center;
-                font-size: 15px;
-                font-weight: bold;
-                border-radius: 10px;
-            }
-            .filterCheckBox{
-                width: 150px;
-                height: 50px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 30px;
-                font-weight: bolder;
-                color: rgb(138, 138, 138);
-                background-color: rgb(18, 18, 18);
-                border: 5px solid rgb(84, 84, 84);
-                border-radius: 20px;
-            }
-            .filterCheckBox:hover, .filterInput:checked+label{
-                cursor: pointer;
-                border: 5px gold solid;
-                span{
-                    background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
-                    font-weight: bold;
-                    -webkit-text-stroke-width: 0.1px;
-                    -webkit-text-stroke-color: black;
-                    -webkit-background-clip: text;
-                    background-clip: text;
-                    color: transparent;
-                }
-            }
-        }
-        .boardWriteBtn{
-            width: 100px;
-            height: 120px;
-            box-sizing: border-box;
-            border: 5px solid gold;
-            border-radius: 20px;
-            margin-left: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            span{
-                background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
-                -webkit-text-stroke-width: 0.1px;
-                -webkit-text-stroke-color: black;
-                -webkit-background-clip: text;
-                background-clip: text;
-                color: transparent;
-                font-size: 25px;
-                font-weight: bolder;
-            }
-        }
-        .boardWriteBtn:hover{
-            cursor: pointer;
-        }
+}
+
+.CrewBoard>.boardTopLine{
+    display: flex;
+    width: 60vw;
+    max-width: 900px;
+    min-width: 460px;
+    height: max-content;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    gap: 20px;
+    position: relative;
+    padding-top: 10px;
+}
+
+.boardTopLine>.boardFilterLine{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    height: 150px;
+    min-height: 150px;
+}
+
+.boardTopLine>.boardWriteBtn{
+    width: 100px;
+    min-width: 100px;
+    height: 120px;
+    box-sizing: border-box;
+    border: 2px solid gold;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    cursor: pointer;
+    span{
+        background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
+        -webkit-text-stroke-width: 0.1px;
+        -webkit-text-stroke-color: black;
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
+        font-size: 25px;
+        font-weight: bolder;
     }
+}
+
+.boardFilterLine>div{
+    width: 100%;
+    height: 70px;
+    min-height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.filterTop>.boardTextBox{
+    width: 25vw;
+    min-width: 250px;
+    max-width: 350px;
+    height: 50px;
+    border-radius: 10px;
+    margin-left: 60px;
+    margin-right: 10px;
+    font-size: 20px;
+    text-align: center;
+    font-weight: bolder;
+}
+
+.filterTop>.boardSearchBtn{
+    width: 60px;
+    min-width: 60px;
+    height: 60px;
+    min-height: 60px;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    background-image: url("/public/img/crewboard/SearchBtnOn.png");
+    background-size: 60px 60px;
+    box-sizing: border-box;
+}
+
+.filterTop>.boardSearchType{
+    width: 150px;
+    height: 50px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.boardFilterLine>.filterBottom{
+    gap: 20px;
+}
+
+.filterBottom>.filterCheckBox{
+    width: 150px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: bolder;
+    color: rgb(138, 138, 138);
+    background-color: rgb(18, 18, 18);
+    border: 5px solid rgb(84, 84, 84);
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.filterBottom>.filterCheckBox:hover, .filterBottom>.filterInput:checked+label{
+    border: 5px gold solid;
+    span{
+        background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
+        font-weight: bold;
+        -webkit-text-stroke-width: 0.1px;
+        -webkit-text-stroke-color: black;
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
+    }
+}
+
+.CrewBoard{
     .boardListLine{
         width: 80%;
         height: 400px;
