--- a/src/RidingAnywhere-client/css/crewBoard.css
+++ b/src/RidingAnywhere-client/css/crewBoard.css
@@ -96,7 +96,7 @@
 }
 
 .filterTop>.boardSearchType{
-    width: 150px;
+    width: 100px;
     height: 50px;
     text-align: center;
     font-size: 15px;
@@ -115,6 +115,13 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
+    font-weight: bold;
+    -webkit-text-stroke-width: 0.1px;
+    -webkit-text-stroke-color: black;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
 }
 
 .filterBottom>.filterCheckBox{
