--- a/src/RidingAnywhere-client/css/crewBoardWrite.css
+++ b/src/RidingAnywhere-client/css/crewBoardWrite.css
@@ -13,7 +13,7 @@
 .CrewBoardWrite>.WriteTop{
     width: 100%;
     display: flex;
-    height: 60px;
+    height: max-content;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
@@ -38,6 +38,20 @@
     .WriteOptionLine>h2{
         display: none;
     }
+}
+
+
+.CrewBoardWrite>.WriteBody{
+    width: 100%;
+    height: max-content;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid orange;
+    border-radius: 10px;
+    box-sizing: border-box;
+    padding: 10px;
+    gap: 10px;
 }
 
 .CrewBoardWrite{
@@ -243,4 +257,12 @@
             }
         }
     }
+}
+
+@media(max-width:980px){
+    .CrewBoardWrite>.WriteBody{
+        flex-direction: column-reverse;
+    }
+
+    
 }
