--- a/src/RidingAnywhere-client/css/crewBoardWrite.css
+++ b/src/RidingAnywhere-client/css/crewBoardWrite.css
@@ -118,7 +118,7 @@
     justify-content: space-between;
     width: 100%;
     max-width: 300px;
-    height: max-content;
+    height: 100%;
     #emergencyNoteBtn:checked + label, #DateEqualBtn:checked~div .TimeLine>label{
         border: 4px solid gold;
         background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
@@ -138,7 +138,7 @@
 
 .WriteOptionBox>.Option{
     width: 300px;
-    height: 320px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
